[gd_scene load_steps=3 format=3 uid="uid://dbu4ylt3frp3u"]

[ext_resource type="Script" path="res://src/scenes/main.gd" id="1_yxk4s"]
[ext_resource type="PackedScene" uid="uid://cb3t1luy5njis" path="res://src/shader/lines.tscn" id="2_1ibl4"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxk4s")

[node name="Shader" parent="." instance=ExtResource("2_1ibl4")]
layout_mode = 1
offset_top = -200.0
offset_bottom = -200.0

[node name="MemoryUsage" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0

[node name="GameTypeSelector" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 192.0
offset_right = 45.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
fit_to_longest_item = false
allow_reselect = true

[node name="GameTypeText" type="Label" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 520.0
offset_right = 724.0
offset_bottom = 543.0

[node name="GameTypeSubText" type="Label" parent="."]
layout_mode = 0
offset_left = 456.0
offset_top = 592.0
offset_right = 792.0
offset_bottom = 615.0
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="item_selected" from="GameTypeSelector" to="." method="_on_game_type_selector_item_selected"]
